tests/snapshots/arg_group__conflicts_with_all.snap
---
source: tests/arg_group.rs
expression: output
---
command cat <<'EOF_ed2c5917'
[1m[31merror:[0m the argument '[33m-c[0m' cannot be used with '[33m-v[0m'

[1m[4mUsage:[0m [1mmyprog[0m [1m-c[0m

For more information, try '[1m--help[0m'.
EOF_ed2c5917
exit 1
