tests/snapshots/arg_group__multiple.snap
---
source: tests/arg_group.rs
expression: "util::run(spec, args)"
---
claptrap_flag='true'
claptrap_color='true'
