tests/snapshots/arg_group__requires_all.snap
---
source: tests/arg_group.rs
expression: output
---
command cat <<'EOF'
[1m[31merror:[0m the following required arguments were not provided:
  [32m-v[0m

[1m[4mUsage:[0m [1mmyprog[0m [1m-d[0m [1m-v[0m [1m-c[0m

For more information, try '[1m--help[0m'.
EOF
exit 1
